--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     />
     <meta name="theme-color" content="#111111" />
     <meta name="author" content="Chao Zhang" />
-
-    <link rel="shortcut icon" type="image/x-icon" href="./cz-light.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./cz.png" />
 
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/cz.svg" />
