--- a/public/index.html
+++ b/public/index.html
@@ -7,36 +7,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
     />
     <meta name="theme-color" content="#111111" />
-    <meta name="author" content="Chao Zhang" />
-    <link rel="shortcut icon" type="image/x-icon" href="./cz.png" />
-
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/cz.svg" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cz.png" /> -->
-    <!-- <link type="text/plain" rel="author" href="%PUBLIC_URL%/humans.txt" /> -->
-
-    <!-- <meta
-      property="og:image"
-      content="https://hamishw.com%PUBLIC_URL%/social-image.png"
-    />
-     -->
-    <!-- <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="549" />
-
-    <meta property="og:title" content="Design portfolio of Chao Zhang" />
-    <meta property="og:site_name" content="chao.gg" />
-    <meta property="og:url" content="https://chao.gg" />
-    <meta property="og:description" content="Multidisciplinary product designer" />
-
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Multidisciplinary product designer" />
-    <meta name="twitter:title" content="Design portfolio of Chao Zhang" />
-    <meta name="twitter:site" content="@hamishMW" />
-    <meta
-      name="twitter:image"
-      content="https://hamishw.com%PUBLIC_URL%/social-image.png"
-    /> -->
+    <meta name="author" content="Raiden Zhang" />
+    <link rel="shortcut icon" type="image/svg+xml" href="./lightning-icon.svg" />
   </head>
 
   <body>
